--- a/nblog/templates/nblog/footer.html
+++ b/nblog/templates/nblog/footer.html
@@ -3,7 +3,8 @@
 
 
 <link rel="stylesheet"  href="{%  static  'css/nav-item.css'  %}">
-<footer class="bg-dark text-center text-white">
+<footer style="background-color: #36454F ;">
+   <!--<footer class="bg-dark text-center text-white"></footer>-->
     <!-- Grid container -->
     <div class="container p-4 pb-0">
         <!-- Section: Form -->
@@ -15,7 +16,7 @@
                     <!--Grid column-->
                     <div class="col-auto">
                         <p class="pt-2">
-                            <strong>Sign up for our newsletter</strong>
+                            <strong style="color: white;">Sign up for our newsletter</strong>
                         </p>
                     </div>
                     <!--Grid column-->
@@ -32,7 +33,7 @@
                             
                             <div class="col-auto">
                                 <!-- Submit button -->
-                                <button type="submit" class="btn btn-outline-light mb-4">
+                                <button style="text-align: left;" type="submit" class="btn btn-outline-light mb-4">
                                     Subscribe
                                 </button>
                             </div>
@@ -43,16 +44,16 @@
      
                     <section>
                         
-                        <i class="fa fa-envelope" aria-hidden="true" style="font-size: 20px;font-weight: 200;"> saahndongransom@gmail.com</i>
+                        <i class="fa fa-envelope" aria-hidden="true" style="font-size: 20px;font-weight: 200; color: aliceblue;"> saahndongransom@gmail.com</i>
                         <br>
                         <br>
-                        <i class='fab fa-whatsapp'aria-hidden="true" style="font-size:20px;font-weight: 200;"> (237)650473572</i>
+                        <i class='fab fa-whatsapp'aria-hidden="true" style="font-size:20px;font-weight: 200;color: aliceblue;"> (237)650473572</i>
                         <br>
                         <br>
         
                         <div class="social">
                             <ul>
-                                <span><li style="display:inline"><a href="https://web.facebook.com/saah.ransomm"target="_blank"><i class="fab fa-facebook-f "
+                                <span><li style="display:inline":><a href="https://web.facebook.com/saah.ransomm"target="_blank"><i class="fab fa-facebook-f "
                                             style="font-size: 25px;color: whitesmoke;"></i></a></li></span>
                                             
                                 <li style="display:inline"><a href="https://twitter.com/SaahndongRansom"target="_blank"><i class="fab fa-twitter"
@@ -72,7 +73,7 @@
         <!-- Section: Form -->
         <!-- Grid container -->
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);color: aliceblue;">
             © 2022 Copyright:
             <a class="text-white" href="site.html">newhatchtech.com</a>
         </div>
