--- a/nblog/templates/nblog/sidebar.html
+++ b/nblog/templates/nblog/sidebar.html
@@ -9,9 +9,40 @@
   .card {
     box-shadow: 0 16px 48px #6a6a6b;
     position:-webkit-sticky ;
-  }
-</style>
 
+</style>
+<style>  
+  .im1{
+  margin: auto;
+  display: block;
+  margin-top: 40px;
+  height: 110px;
+  width: 110px;
+  border-radius: 50%;
+  border: 3px solid #bef4f7;
+  }
+
+  </style>
+  
+  <style>  
+    .im11{
+    margin: auto;
+    display: block;
+    margin-top: 40px;
+    height: 110px;
+    width: 110px;
+    border-radius: 50%;
+    border: 3px solid #bef4f7;
+    position: center;
+    }
+  
+  
+    </style>
+    <style>
+      .im11{
+        align-items: left;
+      }
+    </style>
 <!-- Sidebar Widgets Column -->
 <div class="col-md-4 float-right ">
   <div class="card my-4">
@@ -26,86 +57,44 @@
 <div class="image">
   
   <a href="feli.html"><img src="{% static 'images/anna.png' length %}"></a>
+
 </div><!-- end image-->
-<section style="background-color:darkgrey ;">
-  <div class="profile">
+
+   
+<section>
+  <body>
+   <div>
+      <h1>Features posts</h1>
+    </div>
   
-    <a href="feli.html"><img src="{% static 'images/ransom.jpeg' length %}"></a>
-  
-      
-      <h3 style="color: black;" class="one">Saahndong Ransom</h3>
-      <p class="one">Developer</p>
-      <hr class="t">
-      <hr style="color: yellow;">
-  </div>
-  <ul>
-    <li>
-        <a href="#" class="active">
-            <span class="icon"><i class="fas fa-home"></i></span>
-            <span class="item">Home</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <span class="icon"><i class="fas fa-desktop"></i></span>
-            <span class="item">My Dashboard</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <span class="icon"><i class="fas fa-user-friends"></i></span>
-            <span class="item">People</span>
-        </a>
-    </li>
-    <li>
-      <a href="#">
-        <span class="icon"><i class="fas fa-tachometer-alt"></i></span>
-        <span class="item">Perfomance</span>
-    </a>
-</li>
-<li>
-    <a href="#">
-        <span class="icon"><i class="fas fa-database"></i></span>
-        <span class="item">Development</span>
-    </a>
-</li>
-<li>
-    <a href="#">
-        <span class="icon"><i class="fas fa-chart-line"></i></span>
-        <span class="item">Reports</span>
-    </a>
-</li>
-<li>
-    <a href="#">
-        <span class="icon"><i class="fas fa-user-shield"></i></span>
-        <span class="item">Admin</span>
-    </a>
-  </li>
-  <li>
-      <a href="#">
-          <span class="icon"><i class="fas fa-cog"></i></span>
-          <span class="item">Settings</span>
-      </a>
-  </li>
-</ul>
-<h1>ff</h1>
+    <h3 style="color: white;">Natural beauty. which is grateful in Cameroon.</h3>
+    <img src="https://images.pexels.com/photos/257840/pexels-photo-257840.jpeg?cs=srgb&dl=agriculture-apple-blur-257840.jpg&fm=jpg" alt="">
+    <p style="color:white ;">14th februry, 2023</p>
+    <p style="color: white;">One morning,e found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
+    <p><a style="color:red ;" href="">Read More</a></p>
+    <u><p><a href="">Creative Process and Ways to Enhance Creativity</a></p></u>
+    <u><p><a href="">What Is the Inspiration Behind Creativity?</a></p></u>
+    <u><p><a href="">my Perspective on Art and it impact</a></p></u>
+    <u><p><a href="">The Real Definition of the Word “Creativity”</a></p></u>
+    <u><p><a href="">Can Creativity be developed or is an inherent traits?</a></p></u>
+    <u><p><a href="">Can Anxiety Fuel Creativity? </a></p></u>
+    <u><p><a href="">how to be Creative;3 reliable method that can fail </a></p></u>
+    
+    <p><hr style="color: red;"></p>
+     <div class="layout-container">
+      <main>
+        Hi there! i am <b>Saahndong Ransom</b> I have published 100+ blog posts on life style, mind, catholic faith, django and other related topics. When I am not writing, I enjoy reading, hiking and listening to podcasts.
+      </main>
+      <div class="image">
+        <img class="im11" src="{% static 'images/ransom.jpeg' length %}">
+      </div>
+    </div>
+     
+    </div>
+  </body>
+  </section>  
+  </div> 
 
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br><br>
-<br>
-</div>
-
-</section>
-
-<div class="image">
-  
-  <a href="feli.html"><img src="{% static 'images/anna.png' length %}"></a>
-</div><!-- end image-->
 </div>
 
 
