--- a/nblog/templates/nblog/base.html
+++ b/nblog/templates/nblog/base.html
@@ -16,41 +16,125 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <link rel="stylesheet"  href="{%  static  'css/nav-item.css'  %}">
+     
     </head>
 <body>
-    <!-- Navigation bar -->
-    <header class="header">
-        <!-- Logo -->
-        <a href="{% url 'home' %}" class="logo">NHT</a>
-        <!-- Hamburger icon -->
-        <input class="side-menu" type="checkbox" id="side-menu"/>
-        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-        <!-- Menu -->
-        <nav class="nav">
-            <ul class="menu">
-               <li> <a class="nav-link text-black font-weight-bold" href="{% url 'home' %}"><i class="fa fa-home" style="font-size:24px"></i></a></li>
-                <li>
-                    <a class="nav-link text-black font-weight-bold" href="{% url 'aboutme' %}">about me</a>
-                  </li>
-                  <li class="nav-item text-black">
-                    <a class="nav-link text-black font-weight-bold" href="{% url 'contact' %}">contact</a>
-                  </li>
-                  <li class="nav-item text-black">
-                    <a class="nav-link text-black font-weight-bold" href="{% url 'policy' %}">policy</a> 
-                  </li>
-                  <li class="nav-item text-black">
-                    
-                  </li>
-            </ul>
-        </nav>
-    </header>
-    <!-- Main content -->
-    <main>
-        <article>
-            <h3 class=" site-heading my-4 mt-3 text-black"> Welcome to Newhatch-tech Blog ✍️ </h3>
-            <p class="text-green">changing the narative ✨✨✨ </p>
-        </article>
+  <!DOCTYPE html>
+  <html>
+  
+  
+    
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1">
+    
+    <link rel="stylesheet" href=
+  "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+    <style>
+      
+      /* styling navlist */
+      #navlist {
+        background-color:	#36454F;
+        position: absolute;
+        width: 100%;
+      }
+      
+      /* styling navlist anchor element */
+      #navlist a {
+        float:left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 15px;
+      }
+      .navlist-right{
+        float:right;
+      }
+  
+      /* hover effect of navlist anchor element */
+      #navlist a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      
+      /* styling search bar */
+      .search input[type=text]{
+        width:300px;
+        height:25px;
+        border-radius:25px;
+        border: none;
+  
+      }
+      
+      .search{
+        float:right;
+        margin:7px;
+  
+      }
+      
+      .search button{
+        background-color: 	#36454F;
+        color: #f2f2f2;
+        float: right;
+        padding: 5px 10px;
+        margin-right: 16px;
+        font-size: 12px;
+        border: none;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  
+  <body>
+    
+    <!-- Navbar items -->
+    <div id="navlist">
+      <a href="{% url 'home' %}">Home</a>
+      <a href="#">our commumities</a>
+      <a href="#">porfolio</a>
+      <a href="{% url 'aboutme' %}">About Us</a>
+      <a href="{% url 'contact' %}">Contact Us</a>
+      
+      <!-- search bar right align -->
+      <div class="search">
+        
+        <form action="#">
+          <input type="text"
+            placeholder=" Search blog"
+            name="search">
+          <button>
+            <i class="fa fa-search"
+              style="font-size: 18px;">
+            </i>
+          </button>
+        </form>
+      </div>
+    </div>
+    
+    <!-- logo with tag -->
+    <div class="content">
+      <h1 style="color:#36454F; padding-top:40px;">
+        NEWHATCH-TECH
+      </h1>
+      
+      <b>
+        A  Science
+        Portal for Tech
+      </b>
+      
+      
+  
+  <p>newhatch-tech is a platform where we  teach youth to use the power of thire mind to create what they really care for because if they generate the powerfull thought and let it out without changing it directions it will manifest itself .today Modem science is proving that the entire existence is a vibration,our thought is is also a vibration.There is an alternative which is commitment. If you simply commit yourself to creating what you really care for, now once again your thought gets organized in such a way there is no such thing as whether it is possible or not. There is no hurdle in your thought process. Your thought flows freely towards what you want. Once this happens, making it happen will also naturally follow.
+      </p>
+  
+  
+    </div>
+  </body>
+  
+  </html>				
+  
     </main>
   {% block content %}
   {% endblock content %}
