--- a/newhatchblog/static/css/side.css
+++ b/newhatchblog/static/css/side.css
@@ -1,80 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-.wrapper .sidebar .profile{
-    margin-bottom: 30px;
-    text-align: center;
-}
-
- .profile img{
-    display: block;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 auto;
-}
-
-.profile h3{
-    color: #ffffff;
-    margin: 10px 0 5px;
-}
-
-.sidebar .profile p{
-    color: rgb(206, 240, 253);
-    font-size: 14px;
-}
-.wrapper .sidebar ul li a{
-    display: block;
-    padding: 13px 30px;
-    border-bottom: 1px solid #10558d;
-    color: rgb(241, 237, 237);
-    font-size: 16px;
-    position: relative;
-}
-
-.wrapper .sidebar ul li a .icon{
-    color: #dee4ec;
-    width: 30px;
-    display: inline-block;
-}
+@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab:100,100i,300,300i,400,400i,600,600i,700,700i');
 
 
-.wrapper .sidebar ul li a:hover,
-.wrapper .sidebar ul li a.active{
-    color: #0c7db1;
 
-    background:white;
-    border-right: 2px solid rgb(5, 68, 104);
+
+
+
+section,
+aside,
+article,
+div,
+img{
+  box-sizing: border-box;
+}
+section img{
+  width: 100%;
+}
+section{
+  width: var(--width);
+  background: #36454F;
+  padding: 20px;
+}
+section h3{
+  font-size: calc(var(--width)/10);
+}
+section p{
+  font-family: var(--text-font);
+  color:white;
+  font-size: calc(var(--width)/20);
+}
+.date{
+  font-size: calc(var(--width)/25);
+  color: #fff;
+}
+h1{
+  color: #fff;
 }
 
-.wrapper .sidebar ul li a:hover .icon,
-.wrapper .sidebar ul li a.active .icon{
-    color: #0c7db1;
+section a{
+  text-decoration: none;
+  color: var(--bg);
+  font-family: var(--title-font);
+  font-weight: 700;
+  font-size: calc(var(--width)/23);
 }
-
-.wrapper .sidebar ul li a:hover:before,
-.wrapper .sidebar ul li a.active:before{
-    display: block;
-}
-.one {
-    text-align: center;
-    color: black;
-}
-.t{
-    color:red;
-    border: 6px;;
-    height: 20px;
-    
-}
-.na{
-    color: black;
-}
-. mage-->
-.sidebar1{
-    width: 25%;
-    height: 110vh; // experiment with this value, try changing to 110vh
-    min-height: 500px;
-    overflow: auto;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 5%;
-  }
